usecase-2/network-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
        name: ingress-apply
        namespace: backend
        labels:
                type: policy

spec:
        podSelector:
                matchLabels:
                        access: admin
        policyTypes:
                - Ingress
        ingress: []
