usecase-2/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
        name: enforce-namespace
        namespace: admin
        labels:
                type: policy

spec:
        podSelector:
                matchLabels:
                        access: admin
        policyTypes:
                - Ingress
        ingress: []
