usecase-2/constraint1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyNamespace
metadata:
  name: disallow-namespace
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["NetworkPolicy"]
