usecase-2/template1.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenynamespace
spec:
  crd:
    spec:
      names:
        kind: K8sDenyNamespace
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenynamespace 
        violation [{"msg": msg}] {
          input.review.object.kind == "NetworkPolicy"
          input.review.object.metadata.namespace == "admin"
          msg := "Provided namespace is not allowed."

        }
